Created routine to send redefinition email async
