# model/auth.go
@@ -23,6 +23,10 @@ type JWTToken struct {
 	Token string `json:"token" binding:"required"`
 }
 
+type ForgetPasswordForm struct {
+	Email string `json:"email" binding:"required"`
+}
+
 func (dto *LoginDTO) IsValidData() bool {
 	dto.Login = strings.TrimSpace(dto.Login)
 
